samples/_failures_safe/1761460759_2a854a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a91ebe10.c: In function ‘print_token’:
./samples/SAFE/__tmp_a91ebe10.c:170:5: error: expected identifier or ‘(’ at end of input
  170 |     const
      |     ^~~~~
./samples/SAFE/__tmp_a91ebe10.c:170:5: error: expected declaration or statement at end of input
